fix(ɵtoolkit): change colors in accent color palette to have a higher contrast

--- a/projects/scion/toolkit.internal/widgets/_sci-toolkit-theming.scss
+++ b/projects/scion/toolkit.internal/widgets/_sci-toolkit-theming.scss
@@ -14,53 +14,53 @@
  * Background:  Used for element backgrounds.
  */
 $default-theme: (
-  primary: (
-    50: #fafafa,
-    100: #f5f5f5,
-    200: #eeeeee,
-    300: #e0e0e0,
-    400: #bdbdbd,
-    500: #9f9f9f,
-    600: #757575,
-    700: #616161,
-    800: #424242,
-    900: #212121,
-    default: 500,
-    lighter: 400,
-    darker: 600,
-  ),
-  accent: (
-    50: #e2f2fa,
-    100: #b6dff1,
-    200: #8ac9e7,
-    300: #66b5dc,
-    400: #54a6d5,
-    500: #4198d0,
-    600: #3c8bc2,
-    700: #3579af,
-    800: #2e689c,
-    900: #1f4a7b,
-    default: 800,
-    lighter: 600,
-    darker: 900,
-  ),
-  warn: (
-    50: #ffebee,
-    100: #ffcdd2,
-    200: #ef9a9a,
-    300: #e57373,
-    400: #ef5350,
-    500: #f44336,
-    600: #e53935,
-    700: #d32f2f,
-    800: #c62828,
-    900: #b71c1c,
-    default: 600,
-    lighter: 500,
-    darker: 700,
-  ),
-  foreground: #000000,
-  background: #FFFFFF,
+    primary: (
+        50: #fafafa,
+        100: #f5f5f5,
+        200: #eeeeee,
+        300: #e0e0e0,
+        400: #bdbdbd,
+        500: #9f9f9f,
+        600: #757575,
+        700: #616161,
+        800: #424242,
+        900: #212121,
+        default: 500,
+        lighter: 400,
+        darker: 600,
+    ),
+    accent: (
+        50: #D3E3FE,
+        100: #A7C6FD,
+        200: #7BAAFC,
+        300: #4E8EFA,
+        400: #2271F9,
+        500: #0659E8,
+        600: #0548BC,
+        700: #04378F,
+        800: #03307E,
+        900: #03296C,
+        default: 700,
+        lighter: 400,
+        darker: 900,
+    ),
+    warn: (
+        50: #ffebee,
+        100: #ffcdd2,
+        200: #ef9a9a,
+        300: #e57373,
+        400: #ef5350,
+        500: #f44336,
+        600: #e53935,
+        700: #d32f2f,
+        800: #c62828,
+        900: #b71c1c,
+        default: 600,
+        lighter: 500,
+        darker: 700,
+    ),
+    foreground: #000000,
+    background: #FFFFFF,
 );
 
 /**
